RESOLVED FIXED101768
[CSSRegions] Region styling properties are not filtered correctly
https://bugs.webkit.org/show_bug.cgi?id=101768
Summary [CSSRegions] Region styling properties are not filtered correctly
Mihnea Ovidenie
Reported 2012-11-09 09:01:44 PST
Only a handful of css properties should be allowed inside region styling rules. Patch coming.
Attachments
Patch (4.58 KB, patch)
2012-11-09 09:43 PST, Mihnea Ovidenie
no flags
Patch for landing (4.92 KB, patch)
2012-11-09 10:03 PST, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2012-11-09 09:43:00 PST
Andreas Kling
Comment 2 2012-11-09 09:53:12 PST
Comment on attachment 173328 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173328&action=review r=me This bug really caught me by surprise. I suspect we may have more of them elsewhere. Note that we're using "unsigned : 1" for bool fields because some Windows compiler (MSVC?) refuses to put signed and unsigned members in the same bitfield, causing struct bloat. > Source/WebCore/css/RuleSet.cpp:121 > - , m_isInRegionRule(addRuleFlags & RuleIsInRegionRule) > + , m_isInRegionRule((bool)(addRuleFlags & RuleIsInRegionRule)) Anders says that !!(addRuleFlags & RuleIsInRegionRule) is better here, and I guess I agree.
Mihnea Ovidenie
Comment 3 2012-11-09 10:03:24 PST
Created attachment 173332 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-11-09 10:25:07 PST
Comment on attachment 173332 [details] Patch for landing Clearing flags on attachment: 173332 Committed r134085: <http://trac.webkit.org/changeset/134085>
WebKit Review Bot
Comment 5 2012-11-09 10:25:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.